# quantopian_research_public

./: pyproject.toml
notebooks/lectures/Arbitrage_Pricing_Theory/: notebook.ipynb
