[tool.poetry]
name = "quantopian-research-public"
version = "0.1.0"
description = ""
authors = ["rcardinaux <raphael.cardinaux@gmail.com>"]
readme = "README.md"
packages = [{include = "quantopian_research_public"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
